Refactor state management using Zustand store pattern - Support for account/user/pin VideoWhisper Server authentication - Migrated from React useState to Zustand for global state management - Created appStore.js for centralized application state - Replaced configLoader with configLoaderStore.js integrated with store - Added configUtils.js for helper functions - Improved error handling and user feedback - Added development mode helpers and logging - Updated components to use the new store pattern

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webcam-streaming-webrtc",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,7 +16,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
