Update: latest fixes for ICE candidate handling, peerConfig usage, and README documentation

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:timestamp": "NODE_ENV=production vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "vite build"
+    "deploy": "NODE_ENV=production vite build"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.0",
